--- a/css/cart.css
+++ b/css/cart.css
@@ -2,3 +2,55 @@ h2{
     text-align: center;
     font-family: 'Titillium Web', sans-serif;
 }
+.myClassLog{
+    position: absolute;
+    left: 1420px;
+    top: 15px;
+}
+#btnlog{
+    background-color: #44d0fa;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    height: 40px;
+    border-radius:5px;
+}
+#btn:hover{
+    opacity:0.8;
+}
+
+input[type=text], input[type=password] {
+    width: 300px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    position: relative;
+    left:200px;
+    border-radius:10px;
+  }
+  
+  #btn {
+    background-color: #44d0fa;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 200px;
+    position: relative;
+    left:300px;
+    border-radius:7px;
+  }
+  
+  #btn:hover {
+    opacity: 0.8;
+  }
+  
+  .container {
+    padding: 16px;
+  }
+  
