--- a/css/cart.css
+++ b/css/cart.css
@@ -22,14 +22,14 @@ h2{
     opacity:0.8;
 }
 
-input[type=text] {
+input[type=text], input[type=password]{
     width: 300px;
     padding: 12px 20px;
     margin: 8px 0;
     border: 1px solid #ccc;
     box-sizing: border-box;
     position: relative;
-    left:520px;
+    left:190px;
     border-radius:10px;
   }
   
@@ -42,7 +42,7 @@ input[type=text] {
     cursor: pointer;
     width: 120px;
     position: relative;
-    left:540px;
+    left:260px;
     border-radius:7px;
   }
   
@@ -54,3 +54,28 @@ input[type=text] {
     padding: 16px;
   }
   
+.container-cart{
+  background-color: #44d0fa;
+  color: white;
+  padding: 16px;
+  margin: 8px 10px;
+  border: none;
+  border-radius:10px;
+  width: 1200px;
+  position: relative;
+  left:120px
+}
+.container-cart  ul{
+  list-style: none;
+  padding: 0;
+  margin: 0px 40px; 
+  align-items: center;
+}
+.container-cart  ul li{
+  border: none;
+  border-radius:10px;
+  text-decoration: none;
+  display: inline;
+  align-items: center;
+  margin-right: 150px;
+}
