--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h2{
+h1{
     text-align: center;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 30px;
 }
 input[type=text], input[type=password] {
   width: 500px;
@@ -37,4 +36,14 @@ input[type=text], input[type=password] {
 
 .container {
   padding: 16px;
+}
+
+.footer{
+  position: relative;
+  left:550px;
+  top: 350px;
+}
+.footer a{
+  text-decoration: none;
+  color: black;
 }
