--- a/css/cart.css
+++ b/css/cart.css
@@ -80,7 +80,7 @@ input[type=text], input[type=password]{
   margin-right: 150px;
 }
 
-.container-cart-details{
+/* .container-cart-details{
   margin: 8px 10px;
   position: relative;
   left:130px
@@ -99,7 +99,7 @@ input[type=text], input[type=password]{
   display: inline;
   align-items: center;
   margin-right: 160px;
-}
+} */
 
 
 
